# japan-aquaculture-project

./: .gitignore  README.md  pyproject.toml
agent/: .env.example  ARCHITECTURE_ANALYSIS.md  ENV_TEMPLATE.md  EXPERT_CONSULTATION.md  FIX_NOTES.md  FLOW_UPDATE.md  PORT_MIGRATION.md  README.md  STARTUP_CHECK.md  config.py  convert_env.py  create_env.py  fix_sensor_reading_model.py  graph.py  main.py  requirements.txt  start.sh  state.py  test_agent_chat.html  test_chat.py  test_device_stream.html  test_llm_connection.py  test_search.py  test_websocket_client.py
agent/agents/: __init__.py  chat_agent.py  intent_agent.py  llm_utils.py  query_rewriter.py  routing_agent.py  thinking_agent.py
agent/doc/: CHAT_FLOW.md  HISTORY_FEATURE.md  README_ENV.md  STREAMING_IMPLEMENTATION.md  TABLE_MAPPING.md  TEST_GUIDE.md  WEBSOCKET_GUIDE.md  WEBSOCKET_INIT_IMPLEMENTATION.md
agent/handlers/: __init__.py  base_handler.py  feeder_handler.py  image_handler.py  sensor_handler.py
agent/models/: __init__.py  batch.py  device.py  feeder_log.py  history_record.py  image_detection.py  image_frame.py  manual_doc.py  operation_log.py  sensor_reading.py
agent/schema/: chat_history.sql
agent_new/: .env.example  ENV_CONFIG.md  config.py  database.py  server.py
agent_new/api/: app.py  (+1 more)
backend/: .env.example  .gitignore  EXPERT_API_UPDATE.md  EXPERT_CONFIG_EXAMPLE.txt  README.md  __init__.py  app.py  app_factory.py  app_old.py  config.py  main.py  nohup.out  两个服务端项目对比分析.md  服务端数据接收接口完善总结.md
docs/: database_schema.dbml  优化后数据库表结构详细文档.md
scripts/: generate_mock_data.py  init_database.py
(+131 files in other folders)
