[project]
name = "japan-aquaculture-project"
version = "1.0.0"
description = "日本陆上养殖数据处理系统 - Backend + Agent 统一项目"
requires-python = ">=3.10"
dependencies = [
    # Backend 项目依赖
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.36",
    "pymysql>=1.1.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "werkzeug>=3.0.0",
    
    # Agent 项目依赖
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "pandas>=2.2.3",
    "numpy>=2.1.0",
    "structlog>=24.4.0",
    "httpx>=0.27.2",
    "python-dateutil>=2.9.0",
]

[tool.hatch.build.targets.wheel]
packages = []

